# crat-classifier

./: .gitignore  README.md  pyproject.toml
scripts/: dataset_split.py  test.py  test_stgcn.py  train.py
src/crat_classifier/: configs.py  crat.py  model.py  simple_seq2seq.py  trainer.py  utils.py
src/crat_classifier/dataset/: augmentor.py  dataset_utils.py  suscape_csv_dataset.py  trajactor_utils.py
src/crat_classifier/models/: __init__.py  base_model.py  crat.py  model_util.py  rnn.py  seq2seq.py  st_gnn.py
