[project]
name = "crat-classifier"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Full Name", email = "email@address.invalid" }
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "lightning>=2.2.5",
    "torch-geometric>=2.5.3",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.1",
    "tensorboard>=2.17.0",
    "tqdm>=4.66.4",
    "torchmetrics>=1.4.0.post0",
    "tyro>=0.8.4",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crat_classifier"]
